--- a/symfony/templates/index.html.twig
+++ b/symfony/templates/index.html.twig
@@ -31,9 +31,7 @@
 
             <div class="col-1"></div>
         </div>
-    {% endif %}
-	
-	{% if loanData %}
+	{% elseif loanData %}
         <div class="row">
             <div class="col-1"></div>
 
