--- a/symfony/templates/index.html.twig
+++ b/symfony/templates/index.html.twig
@@ -98,6 +98,10 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="mt-4 text-center">
+                    <a class="sp-email-input" href="#"><i class="bi bi-envelope"></i>&nbsp;&nbsp;<span>Email my results!</span></a>
+                </div>
             </div>
 
             <div class="col-1"></div>
